[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "peek-plugin-base"
version = "0.0.0"
authors = [{name = "Synerty", email = "contact@synerty.com"}]
description = "Peek Plugin Base."
keywords = ["Peek", "Python", "Platform", "synerty"]
classifiers = []
dependencies = [
    "SQLAlchemy",
    "alembic >= 0.8.7",
    "GeoAlchemy2",
    "Twisted[tls,conch]",
    "txcelery-py3 >= 1.6.3",
    "json-cfg-rw",
    "vortexpy",
    "pytmpdir",
    "txhttputil",
    "SOAPpy-py3 >= 0.52.26",
    "wstools-py3 >= 0.54.2",
    "txsuds-py3 >= 0.5.9",
    "reactivex>=4.0.4",
    "pytz",
    "tzlocal",
    "patch-ng >=1.17.4",
    "setproctitle",
]

[project.urls]
Homepage = "https://bitbucket.org/synerty/peek-plugin-base"
Download = "https://bitbucket.org/synerty/peek-plugin-base/get/0.0.0.zip"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["*.tests"] # *.tests.*; tests.*; tests
namespaces = false
